added bangkok shows, beautified contents

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,10 +33,17 @@
     <!-- Google Analytics
     =============================================================================================-->
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-90104218-2', 'auto');
         ga('send', 'pageview');
@@ -43,7 +51,7 @@
 </head>
 
 <body>
-<!-- NAVBAR
+    <!-- NAVBAR
 ================================================== -->
     <nav class="navbar navbar-inverse navbar-static-top">
         <div class="container">
@@ -72,7 +80,7 @@
                         <ul class="dropdown-menu">
                             <li class="dropdown-header">Recent Shows</li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="http://www.breakroomdowntown.com/" target = "_blank">Topeka, KS - Breakroom</a></li>
+                            <li><a href="http://www.breakroomdowntown.com/" target="_blank">Topeka, KS - Breakroom</a></li>
                             <li><a href="#">Kansas City, MO - Stanford and Sons, Kick Comedy Theater, Uptown Arts Bar</a></li>
                             <li><a href="#">Lawrence, KS - Replay lounge, Jackpot Saloon, Jazzhaus, Oread</a></li>
                             <li><a href="http://www.riley.army.mil/" target="_blank">Fort Riley, KS - Fort Riley Military Base</a></li>
@@ -84,12 +92,13 @@
                             <li><a href="#">Johannesburg, South Africa - The Box a Goliath and Goliath Production</a></li>
                             <li><a href="#">Paris, France - A terrible hostel open mic</a></li>
                             <li><a href="http://www.stregisdoha.com/" target="_blank">Doha, Qatar - Jazz at the Lincoln Center at St. Regis</a></li>
-                            <li><a href="http://thedomainhotels.com/restaurant_1/txoko.en.html" target = "_blank">Manama, Bahrain - Txoko Lounge</a></li>
+                            <li><a href="http://thedomainhotels.com/restaurant_1/txoko.en.html" target="_blank">Manama, Bahrain - Txoko Lounge</a></li>
+                            <li><a href="http://www.comedyclubbangkok.com/" target="_blank">Bangkok, Thailand - Comedy Club Bangkok, Stagetime Comedy Club</a></li>
                             <li role="separator" class="divider"></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle ="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shows<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shows<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>
                                 <div id="gcf-nate-events">
@@ -120,90 +129,101 @@
         </div>
     </nav>
 
-<!-- Carousel (images are specified in fade.css)
+    <!-- Carousel (images are specified in fade.css)
 ================================================== -->
-<div class="carousel fade-carousel slide carousel-fade" data-ride="carousel" data-interval="5000" id="bs-carousel">
-  <!-- Overlay -->
+    <div class="carousel fade-carousel slide carousel-fade" data-ride="carousel" data-interval="5000" id="bs-carousel">
+        <!-- Overlay -->
 
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#bs-carousel" data-slide-to="0" class="active"></li>
-    <li data-target="#bs-carousel" data-slide-to="1"></li>
-    <li data-target="#bs-carousel" data-slide-to="2"></li>
-  </ol>
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#bs-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#bs-carousel" data-slide-to="1"></li>
+            <li data-target="#bs-carousel" data-slide-to="2"></li>
+        </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item slides active">
-      <div class="slide-1">
-          <div class="overlay"></div>
-      </div>
-      <div class="hero">
-        <hgroup>
-            <h1>@nateeubanks</h1>
-            <h2>...each time he finds a new way to make me laugh...Truly a funny dude.</h2>
-            <h4>- Rob Schulte</h4>
-        </hgroup>
-        <!-- <button class="btn btn-hero btn-lg" role="button">See all features</button> -->
-      </div>
-    </div>
-    <div class="item slides">
-      <div class="slide-2">
-          <div class="overlay"></div>
-      </div>
-      <div class="hero">
-        <hgroup>
-            <h2>Nate Eubanks is one of the funniest people I know.</h2>
-            <h4>- Tristan Newell</h4>
-        </hgroup>
-        <a href="mailto:nathan.eubanks@gmail.com"><button class="btn btn-hero btn-lg" role="button" type="button">Book Nate</button></a>
-      </div>
-    </div>
-    <div class="item slides">
-      <div class="slide-3">
-          <div class="overlay"></div>
-      </div>
-      <div class="hero">
-        <hgroup>
-            <h2>He’s the type of comic I love to book...</h2>
-            <h4>- Matt Keck</h4>
-        </hgroup>
-        <a href="https://drive.google.com/folderview?id=0BzgqfV9PL27hMTR6NTdqRzFiMlE&usp=sharing"><button class="btn btn-hero btn-lg" role="button" type="button">Gallery</button></a>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="container-fluid">
-    <!-- Twitter TimeLine and Video -->
-    <!-- ================================================== -->
-
-    <div class="row">
-        <div class="col-sm-3"> <!-- height attr is not HTML5 compliant but functions; replacing with style tag doesn't work -->
-            <a class="twitter-timeline" href="https://twitter.com/NateEubanks" data-widget-id="649626255378247680" height="500">Tweets by @NateEubanks</a>
-            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-        </div>
-
-        <hr class="featurette-divider mobile-only" />
-
-        <!-- 16:9 aspect ratio video-->
-        <div class="col-sm-15 col-md-9">
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/x1IbvhJfLOo"></iframe>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item slides active">
+                <div class="slide-1">
+                    <div class="overlay"></div>
+                </div>
+                <div class="hero">
+                    <hgroup>
+                        <h1>@nateeubanks</h1>
+                        <h2>...each time he finds a new way to make me laugh...Truly a funny dude.</h2>
+                        <h4>- Rob Schulte</h4>
+                    </hgroup>
+                    <!-- <button class="btn btn-hero btn-lg" role="button">See all features</button> -->
+                </div>
+            </div>
+            <div class="item slides">
+                <div class="slide-2">
+                    <div class="overlay"></div>
+                </div>
+                <div class="hero">
+                    <hgroup>
+                        <h2>Nate Eubanks is one of the funniest people I know.</h2>
+                        <h4>- Tristan Newell</h4>
+                    </hgroup>
+                    <a href="mailto:nathan.eubanks@gmail.com"><button class="btn btn-hero btn-lg" role="button" type="button">Book Nate</button></a>
+                </div>
+            </div>
+            <div class="item slides">
+                <div class="slide-3">
+                    <div class="overlay"></div>
+                </div>
+                <div class="hero">
+                    <hgroup>
+                        <h2>He’s the type of comic I love to book...</h2>
+                        <h4>- Matt Keck</h4>
+                    </hgroup>
+                    <a href="https://drive.google.com/folderview?id=0BzgqfV9PL27hMTR6NTdqRzFiMlE&usp=sharing"><button class="btn btn-hero btn-lg" role="button" type="button">Gallery</button></a>
+                </div>
             </div>
         </div>
     </div>
 
-    <!-- Marketing messaging and featurettes
+    <div class="container-fluid">
+        <!-- Twitter TimeLine and Video -->
+        <!-- ================================================== -->
+
+        <div class="row">
+            <div class="col-sm-3">
+                <!-- height attr is not HTML5 compliant but functions; replacing with style tag doesn't work -->
+                <a class="twitter-timeline" href="https://twitter.com/NateEubanks" data-widget-id="649626255378247680" height="500">Tweets by @NateEubanks</a>
+                <script>
+                    ! function(d, s, id) {
+                        var js, fjs = d.getElementsByTagName(s)[0],
+                            p = /^http:/.test(d.location) ? 'http' : 'https';
+                        if (!d.getElementById(id)) {
+                            js = d.createElement(s);
+                            js.id = id;
+                            js.src = p + "://platform.twitter.com/widgets.js";
+                            fjs.parentNode.insertBefore(js, fjs);
+                        }
+                    }(document, "script", "twitter-wjs");
+                </script>
+            </div>
+
+            <hr class="featurette-divider mobile-only" />
+
+            <!-- 16:9 aspect ratio video-->
+            <div class="col-sm-15 col-md-9">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/x1IbvhJfLOo"></iframe>
+                </div>
+            </div>
+        </div>
+
+        <!-- Marketing messaging and featurettes
     ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
+        <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <div class="marketing">
+        <div class="marketing">
 
-        <!-- START THE FEATURETTES -->
+            <!-- START THE FEATURETTES -->
 
-        <!-- <hr class="featurette-divider">
+            <!-- <hr class="featurette-divider">
 
         <div class="row featurette">
             <div class="col-md-7">
@@ -217,77 +237,78 @@
             </div>
         </div> -->
 
-        <hr class="featurette-divider">
+            <hr class="featurette-divider">
 
-        <div class="row featurette">
-            <div class="col-md-7 col-md-push-5">
-                <h2 class="featurette-heading">Nate Eubanks</h2><h4><span class="text-muted"><a href="https://twitter.com/NateEubanks">@NateEubanks</a></span></h4>
-                <p class="lead">Nate Eubanks grew up in rural Northeast Kansas and later worked internationally
-                    in Paraguay and Kuwait. He has performed stand up comedy in eight countries: Canada,
-                    Kuwait, Qatar, Bahrain, South Africa, Netherlands, Australia and through the midwest
-                    USA. From 5 star hotels in Qatar, art galleries in Johannesburg, garages in Chicago,
-                    and finally clubs in Sydney, Nate brings the laughs to every audience.</p>
+            <div class="row featurette">
+                <div class="col-md-7 col-md-push-5">
+                    <h2 class="featurette-heading">Nate Eubanks</h2>
+                    <h4><span class="text-muted"><a href="https://twitter.com/NateEubanks">@NateEubanks</a></span></h4>
+                    <p class="lead">Nate Eubanks grew up in rural Northeast Kansas and later worked internationally in Paraguay and Kuwait. He has performed stand up comedy in eight countries: Canada, Kuwait, Qatar, Bahrain, South Africa, Netherlands, Australia and through
+                        the midwest USA. From 5 star hotels in Qatar, art galleries in Johannesburg, garages in Chicago, and finally clubs in Sydney, Nate brings the laughs to every audience.</p>
+                </div>
+                <div class="col-md-5 col-md-pull-7">
+                    <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head2.jpg" alt="Image of Nate">
+                </div>
             </div>
-            <div class="col-md-5 col-md-pull-7">
-                <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/head2.jpg" alt="Image of Nate">
-            </div>
-        </div>
 
-        <hr class="featurette-divider">
+            <hr class="featurette-divider">
 
-        <!--<div class="row featurette">-->
+            <!--<div class="row featurette">-->
             <!--<div class="col-md-7">-->
-                <!--<h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>-->
-                <!--<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
+            <!--<h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>-->
+            <!--<p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
                 euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>-->
             <!--</div>-->
             <!--<div class="col-md-5">-->
-                <!--<img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
+            <!--<img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto"
                 src="images/natesmile.jpg" alt="Generic placeholder image">-->
             <!--</div>-->
-        <!--</div>-->
+            <!--</div>-->
 
-        <!--<hr class="featurette-divider">-->
+            <!--<hr class="featurette-divider">-->
 
-        <!-- /END THE FEATURETTES -->
+            <!-- /END THE FEATURETTES -->
 
-    <!-- FOOTER -->
-    <footer class="footer">
-        <p><a href="http://18.220.25.115/">&copy; 2017 Brian Thomas &middot;</a>
-            <span class="pull-right"><a href="#">Back to top</a></span></p>
-    </footer>
+            <!-- FOOTER -->
+            <footer class="footer">
+                <p><a href="http://18.220.25.115/">&copy; 2017 Brian Thomas &middot;</a>
+                    <span class="pull-right"><a href="#">Back to top</a></span></p>
+            </footer>
 
-    </div><!-- /.container -->
-</div>
+        </div>
+        <!-- /.container -->
+    </div>
 
-<!-- Bootstrap core JavaScript
+    <!-- Bootstrap core JavaScript
 ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
-<!-- gCalFlow
+    <!-- gCalFlow
 ================================================== -->
-<script>_gCalFlow_debug = true;</script>
-<script type="text/javascript" src="jquery-gcal-flow-3.0.1/jquery.gcal_flow.js"></script>
+    <script>
+        _gCalFlow_debug = true;
+    </script>
+    <script type="text/javascript" src="jquery-gcal-flow-3.0.1/jquery.gcal_flow.js"></script>
 
-<script type="text/javascript">
-    $(function () {
-        $('#gcf-nate-events').gCalFlow({
-            calid: 'j4ttdotndrai1e6grt7bp7i6ko@group.calendar.google.com',
-            // callback: loadLinks(),
-            // Comment out the apikey line below only for testing
-            apikey: 'AIzaSyC8z-yio3AXTmOXlgt8zQam57uSD8tMObY',
-            maxitem: 15,
-	        auto_scroll: false,
-            no_items_html: 'No Upcoming Shows',
-            // link_item_title: false,
-            // link_item_description: true
+    <script type="text/javascript">
+        $(function() {
+            $('#gcf-nate-events').gCalFlow({
+                calid: 'j4ttdotndrai1e6grt7bp7i6ko@group.calendar.google.com',
+                // callback: loadLinks(),
+                // Comment out the apikey line below only for testing
+                apikey: 'AIzaSyC8z-yio3AXTmOXlgt8zQam57uSD8tMObY',
+                maxitem: 15,
+                auto_scroll: false,
+                no_items_html: 'No Upcoming Shows',
+                // link_item_title: false,
+                // link_item_description: true
+            });
         });
-    });
-</script>
+    </script>
 
-<!-- <script>
+    <!-- <script>
     function loadLinks() {
         var sourceLink = document.getElementById('aSource');
         sourceLink = sourceLink.innerHTML;
@@ -296,9 +317,9 @@
     }
 </script> -->
 
-<!-- IE10 viewport hack for Surface/desktop Windows 8 bug
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug
 =======================================================================-->
-<!--[if lt IE 10]>
+    <!--[if lt IE 10]>
     <script src="js/ie10-viewport-bug-workaround.js"></script>
 <![endif]-->
 
