--- a/reviews.html
+++ b/reviews.html
@@ -95,6 +95,8 @@
                             <li><a href="#">Paris, France - A terrible hostel open mic</a></li>
                             <li><a href="http://www.stregisdoha.com/" target="_blank">Doha, Qatar - Jazz at the Lincoln Center at St. Regis</a></li>
                             <li><a href="http://thedomainhotels.com/restaurant_1/txoko.en.html" target="_blank">Manama, Bahrain - Txoko Lounge</a></li>
+                            <li><a href="http://www.comedyclubbangkok.com/" target="_blank">Bangkok, Thailand - Comedy Club Bangkok, Stagetime Comedy Club</a></li>
+                            <li role="separator" class="divider"></li>
                             <li role="separator" class="divider"></li>
                         </ul>
                     </li>
@@ -161,7 +163,6 @@
                 <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" src="images/seanMorahan.jpg" alt="Image of Tristan Newell">
             </div>
         </div>
-
 
         <hr class="featurette-divider">
 
