--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <script src="js/angularjs/angular-route.min.js"></script>
 
     <!-- bootstrap dependencies -->
-    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="./js/jquery.min.js"></script>
+    <!-- 3.3.1 doesn't work with gCalFlow -->
+    <!-- <script src="./js/jquery-3.3.1.min.js"></script> -->
     <script src="./js/popper.min.js"></script>
 
     <!-- Modules -->
@@ -50,12 +52,14 @@
     <script src="./app/appModule/review/review.component.js"></script>
     <script src="./app/appModule/footer/footer.component.js"></script>
 
-    <!-- gCalFlow -->
+    <!-- gCalFlow // this plugin doesn't work with a never version of jQuery -->
+    <script type="text/javascript" src="jquery-gcal-flow-3.0.1/jquery.gcal_flow.js"></script>
     <link href="jquery-gcal-flow-3.0.1/jquery.gcal_flow.css" rel="stylesheet" type="text/css">
+
 
     <!-- Google Analytics
     =============================================================================================-->
-    <!-- <script>
+    <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
             i[r] = i[r] || function() {
@@ -70,7 +74,7 @@
 
         ga('create', 'UA-90104218-2', 'auto');
         ga('send', 'pageview');
-    </script> -->
+    </script>
 </head>
 
 <body>
@@ -86,7 +90,7 @@
 
     <!-- gCalFlow
 ================================================== -->
-    <script>
+    <!-- <script>
         _gCalFlow_debug = true;
     </script>
     <script type="text/javascript" src="jquery-gcal-flow-3.0.1/jquery.gcal_flow.js"></script>
@@ -105,7 +109,7 @@
                 // link_item_description: true
             });
         });
-    </script>
+    </script> -->
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug
