switched from twitter script to ngTweet

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <!-- ngRoute -->
     <script src="js/angularjs/angular-route.min.js"></script>
 
+    <!-- ngTweet -->
+    <script src="js/ngTweet.min.js"></script>
+
+    </script>
     <!-- bootstrap dependencies -->
     <script src="./js/jquery.min.js"></script>
     <!-- 3.3.1 doesn't work with gCalFlow -->
