switched to newer gCal release, even though it's still not working; service call set up for get request to calendar api; 401 requests, but maybe it just needs time to sync;

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <script src="./app/appModule/app.module.js"></script>
 
     <!-- Service -->
-    <!-- <script src="./app/appModule/nate.service.js"></script> -->
+    <script src="./app/appModule/calendar.service.js"></script>
 
     <!-- Components -->
     <script src="./app/appModule/navigation/navigation.component.js"></script>
@@ -57,8 +57,8 @@
     <script src="./app/appModule/footer/footer.component.js"></script>
 
     <!-- gCalFlow // this plugin doesn't work with a never version of jQuery -->
-    <script type="text/javascript" src="jquery-gcal-flow-3.0.1/jquery.gcal_flow.js"></script>
-    <link href="jquery-gcal-flow-3.0.1/jquery.gcal_flow.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="jquery-gcal-flow-3.0.2/jquery.gcal_flow.min.js"></script>
+    <link href="jquery-gcal-flow-3.0.2/jquery.gcal_flow.css" rel="stylesheet" type="text/css">
 
 
     <!-- Google Analytics
